--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -1,3 +1,10 @@
-.login-cls{
+.login-cls {
     margin-left: 40%;
+    position: relative;
+}
+
+.back-ground-img-cls {
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
