--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -1,10 +1,19 @@
+.out-side{
+    width: 100%;
+    height: 100%;
+}
+
 .login-cls {
-    margin-left: 40%;
     position: relative;
 }
 
 .back-ground-img-cls {
+    margin-left: -1%;
     width: 100%;
-    height: 100%;
+    height: 98%;
     position: absolute;
+}
+
+.second-div a{
+    text-decoration: none;
 }
