--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="../static/plugins/layui/css/layui.css" rel="stylesheet">
-    <script src="../static/plugins/layui/layui.all.js"></script>
-    <link href="static/css/login/login.css" rel="stylesheet"/>
     <script src="static/plugins/jQuery/jQuery.js" rel="stylesheet"></script>
+    <script src="static/plugins/eCharts/eCharts.min.js" rel="stylesheet"></script>
+    <link href="static/css/login/login.css" rel="stylesheet"/>
     <title>登录</title>
 </head>
 <body>
