--- a/src/main/resources/templates/personnel/shiyuan.html
+++ b/src/main/resources/templates/personnel/shiyuan.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="../static/plugins/layui/css/layui.css" rel="stylesheet">
-    <script src="../static/plugins/layui/layui.all.js"></script>
-    <script src="../static/plugins/jQuery/jQuery.js" rel="stylesheet"></script>
-    <link href="../static/css/personnel/shiyuan.css" rel="stylesheet"/>
+    <#include "/include.html">
+    <link href="${path}/static/css/personnel/shiyuan.css" rel="stylesheet"/>
     <title>石原里美</title>
 </head>
 <body>
