--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="static/plugins/layui/css/layui.css" rel="stylesheet">
-    <script src="static/plugins/layui/layui.all.js"></script>
+    <#include "/include.html">
     <title>首页</title>
 </head>
 <body class="layui-layout-body">
