--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <#import "spring.ftl" as spring>
     <script src="static/plugins/jQuery/jQuery.js" rel="stylesheet"></script>
     <script src="static/plugins/eCharts/eCharts.min.js" rel="stylesheet"></script>
     <link href="static/css/login/login.css" rel="stylesheet"/>
@@ -10,7 +11,7 @@
 <body>
 <div class="layui-container layui-fluid out-side">
     <div class="layui-row back-ground-img-cls">
-        <img src="static/pictures/MaSang.jpg" style="width: 100.5%;height: 100%">
+        <img src="/cloudDemo/static/pictures/MaSang.jpg" style="width: 100.5%;height: 100%">
     </div>
     <div class="layui-row login-cls second-div">
         <div class="layui-col-lg-offset12 layui-col-md-offset12 layui-col-sm-offset12">
