--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -1,7 +1,7 @@
-<#assign path="${springMacroRequestContext.getContextPath()}">
-<link href="${path}/static/plugins/layui/css/layui.css" rel="stylesheet">
-<script src="${path}/static/plugins/layui/layui.all.js" rel="stylesheet"></script>
-<script src="${path}/static/plugins/jQuery/jQuery.js" rel="stylesheet"></script>
-<script src="${path}/static/plugins/eCharts/eCharts.min.js" rel="stylesheet"></script>
-<script src="${path}/static/plugins/vue/vue.js" rel="stylesheet"></script>
+<#assign path="${springMacroRequestContext.getContextPath()}/static">
+<link href="${path}/plugins/layui/css/layui.css" rel="stylesheet">
+<script src="${path}/plugins/layui/layui.all.js" rel="stylesheet"></script>
+<script src="${path}/plugins/jQuery/jQuery.js" rel="stylesheet"></script>
+<script src="${path}/plugins/eCharts/eCharts.min.js" rel="stylesheet"></script>
+<script src="${path}/plugins/vue/vue.js" rel="stylesheet"></script>
 
