--- a/src/main/resources/templates/personnel/personnel.html
+++ b/src/main/resources/templates/personnel/personnel.html
@@ -3,10 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <#include "/include.html">
+    <link rel="stylesheet" href="${path}/css/personnel/personnel.css"/>
     <title>人员</title>
 </head>
 <body>
-<div id="index01" style="width: 40%;height: 550px;text-align: center;margin-left: 30%;margin-top: 2%;"></div>
+<!--<div id="index01" style="width: 40%;height: 550px;text-align: center;margin-left: 30%;margin-top: 2%;"></div>-->
+
+<div class="layui-upload">
+        <button type="button" class="layui-btn show-one-file" id="test1">选择图片</button>
+        <div class="layui-upload-list">
+            <img class="layui-upload-img" id="demo1">
+            <p id="demoText"></p>
+        </div>
+        <button id="sub" type="button" class="layui-btn">确认上传</button>
+</div>
 </body>
-<script src="${path}/static/js/personnel.js" rel="stylesheet"></script>
+<!--<script src="${path}/static/js/personnel.js" rel="stylesheet"></script>-->
+<script>
+    layui.use('upload', function () {
+        var $ = layui.jquery
+            , upload = layui.upload;
+        //普通图片上传
+        var uploadInst = upload.render({
+            elem: '#test1'
+            , url: 'uploadPicture' //改成您自己的上传接口
+            , auto: false
+            , bindAction: "#sub"
+            ,choose: function(obj){
+                //将每次选择的文件追加到文件队列
+                var files = obj.pushFile();
+                //预读本地文件，如果是多文件，则会遍历。(不支持ie8/9)
+                obj.preview(function(index, file, result){
+                    $('#demo1').attr('src', result); //图片链接（base64）
+                    // console.log(index); //得到文件索引
+                    // console.log(file); //得到文件对象
+                    //
+                    // console.log(result); //得到文件base64编码，比如图片
+
+                    //obj.resetFile(index, file, '123.jpg'); //重命名文件名，layui 2.3.0 开始新增
+
+                    //这里还可以做一些 append 文件列表 DOM 的操作
+
+                    //obj.upload(index, file); //对上传失败的单个文件重新上传，一般在某个事件中使用
+                    //delete files[index]; //删除列表中对应的文件，一般在某个事件中使用
+                });
+            }
+            , before: function (obj) {
+                //预读本地文件示例，不支持ie8
+                obj.preview(function (index, file, result) {
+                    $('#demo1').attr('src', result); //图片链接（base64）
+                });
+            }
+            , done: function (res,index) {
+                //如果上传失败
+                if (res.code != 200) {
+                    return layer.msg('上传失败');
+                }
+                console.log(index)
+                //上传成功
+            }
+            , error: function () {
+                //演示失败状态，并实现重传
+                var demoText = $('#demoText');
+                demoText.html('<span style="color: #FF5722;">上传失败</span> <a class="layui-btn layui-btn-xs demo-reload">重试</a>');
+                demoText.find('.demo-reload').on('click', function () {
+                    uploadInst.upload();
+                });
+            }
+        });
+    });
+
+</script>
 </html>
